--- a/svelte-mf-app/host/index.html
+++ b/svelte-mf-app/host/index.html
@@ -17,6 +17,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- not the best solution, because it's gonna pull every tailwind class -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Host</title>
   </head>
   <body>
